# gauges-reader

./: .env  .gitignore  README.md  pyproject.toml  synthgauge_paper_v2.md  tz_v2_baseline_experiments.md
api/: __init__.py  __main__.py  geometry.py  main.py  pipeline.py
configs/: config.yaml  config_det_kp.yaml  config_detection.yaml  config_detection_yolov8.yaml  config_full_pipeline.yaml  config_full_pipeline_real_landmarks.yaml  config_keypoints.yaml  config_regression.yaml  config_segmentation.yaml  synthgauge_det_yolo_data.yaml  synthgauge_kp_yolo_data.yaml  synthgauge_yolo_data.yaml
data/: build_det_kp_from_coco.py  build_det_yolo_from_coco.py  build_kp_yolo_pose_from_coco.py  build_needle_seg_yolo.py  build_regression_from_coco.py  build_yolo_from_coco.py  datasets.py  download_dataset.py  download_hf_dataset.py  transforms.py  visualize_det_kp_samples.py  visualize_regression_samples.py  visualize_v2_dataset_samples.py
inference/: predict.py  visualize_det_kp_predictions.py  visualize_detection_predictions.py  visualize_full_pipeline_predictions.py  visualize_full_pipeline_real_landmarks.py  visualize_keypoints_predictions.py  visualize_needle_seg_predictions.py  visualize_regression_predictions.py
models/: model.py
summaries/: END_TO_END_REGRESSION.md
tests/: test_geometry.py
training/: eval.py  eval_full_pipeline.py  eval_keypoints_yolo_pose.py  eval_needle_seg_yolo.py  train.py  train_det_kp.py  train_det_yolo.py  train_detection_yolo.py  train_keypoints_yolo_pose.py  train_needle_seg_yolo.py  train_regression.py
utils/: config.py  io.py  (+2 more)
(+32 files in other folders)
