[project]
name = "gauges-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.115.0",
    "huggingface-hub>=1.8.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "python-multipart>=0.0.20",
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
    "ultralytics>=8.3.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
